predictor kinda works, runs out of memory.